@@ -13,4 +13,5 @@ with contributions by:
     the OSALP team, http://osalp.sourceforge.net
     Kristjan G. Bjarnason <kgb@gangverk.is>
     Nicu Pavel <npavel@ituner.com>
+    Kai Krakow <kai@kaishome.de>
 
