@@ -1,5 +1,9 @@
 DarkIce next version
 
+    o added possibility to stream in mono even when recording in stereo,
+      thus enabling mono and stereo streams with the same darkice instance.
+      only for mp3 streams at the moment
+      thanks to Kai Krakow <kai@kaishome.de>
     o bug fix: resampling audio for vorbis streams bugs fixed
 
 02-08-2002: DarkIce 0.10.1 released
